# BlankDB

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  ToDO
include/blankdb/: Database.hpp  IndexManager.hpp  QueryEngine.hpp  StorageManager.hpp
include/blankdb/cli/: Interface.hpp  Parser.hpp
include/blankdb/index/: BTreeNode.hpp  CMakeLists.txt
include/blankdb/utils/: CMakeLists.txt  Error.hpp  Logger.hpp  Serialization.hpp
samples/: basic_usage.cpp
src/: CMakeLists.txt  Database.cpp  IndexManager.cpp  QueryEngine.cpp  StorageManager.cpp  main.cpp
src/cli/: Interface.cpp  Parser.cpp
src/index/: BTreeNode.cpp
src/utils/: Logger.cpp  Serialization.cpp
